client/src/pages/game/game.scss
html,
body {
  font-family: "Bahnschrift", sans-serif;
  margin: 0;
  padding: 0;
  height: 100%;
}

.game {
  background-image: url("~/public/img/background.png");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  .game_wrapper {
    border-radius: 12px;
    margin-top: 30px;
    background-color: #130f14;
    display: flex;
    flex-direction: column;
    width: 80%;
    padding-bottom: 30px;

    .banner {
      display: flex;
      width: 100%;
      height: 400px;
      justify-content: center;
      align-items: center;
      border-top-left-radius: 12px;
      border-top-right-radius: 12px;
      overflow: hidden;

      img {
        width: 100%;
        height: 100%;
        object-fit: cover;
      }
    }

    .info {
      padding: 0px 30px;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
      gap: 25px;
      width: auto;

      .top {
        width: 100%;
        gap: 20px;
        display: flex;
        flex-direction: row;

        .left {
          margin-top: 0;
          position: relative;
          width: fit-content;
          display: flex;
          align-items: center;
          flex-direction: column;

          .poster_wrapper {
            width: 100%;
            height: 350px;
            border-radius: 50px;
            overflow: hidden;

            img {
              height: 100%;
              object-fit: cover;
            }
          }

          .rating {
            left: 60%;
            top: 310px;
            position: static;
            display: flex;
            align-items: center;
            justify-content: space-between;
            flex-direction: row;
            gap: 5px;

            span {
              color: white;
              font-size: 30px;
              font-weight: 450;
            }

            .star {
              margin-top: -5px;
              color: white;
              font-size: 40px;
            }
          }
        }

        .right {
          padding: 0px 10px;
          width: fit-content;
          display: flex;
          flex-direction: column;

          h1 {
            margin-bottom: 10px;
            color: white;
            font-weight: bold;
            font-size: 40px;
          }

          .description {
            background-color: #1c151e;
            border-radius: 10px;
            padding: 0px 14px;

            p {
              color: white;
              font-size: 20px;
            }
          }
        }
      }

      .bottom {
        display: flex;
        flex-direction: column;
        gap: 10px;

        h2 {
          margin: 0;
          color: white;
          font-weight: bold;
          font-size: 28px;
        }

        .sections {
          display: flex;
          justify-content: space-between;
          align-items: stretch;

          .left {
            z-index: 2;
            display: flex;
            flex-direction: column;
            gap: 10px;
            height: 100%;

            video {
              width: 720px;
              height: auto;
              border-radius: 15px;
            }
          }

          .right {
            position: relative;
            z-index: 1;
            left: -20px;
            display: flex;
            flex-direction: column;

            .articles_wrapper {
              height: 100%;
              padding: 10px;
              padding-left: 40px;
              border-radius: 0 15px 15px 0;
              background-color: #1c151e;

              .article {
                display: flex;
                flex-direction: column;
                gap: 20px;

                .top {
                  padding-top: 10px;
                  display: flex;
                  align-items: start;
                  justify-content: space-between;

                  h1 {
                    margin: 0;
                    color: white;
                    font-size: 30px;
                  }

                  .author {
                    display: flex;
                    gap: 10px;
                    justify-content: space-between;
                    align-items: center;

                    span {
                      color: white;
                      font-size: 14px;
                    }

                    img {
                      width: 40px;
                      object-fit: cover;
                      border-radius: 50%;
                    }
                  }
                }

                .bottom {
                  display: flex;
                  flex-direction: column;
                  gap: 25px;

                  p {
                    color: white;
                    font-size: 16px;
                  }

                  .read_more {
                    align-self: flex-end;
                    text-decoration: none;
                    cursor: pointer;
                    transition: color 150ms ease;
                    background-color: #6b2da8;

                    &:hover {
                      background-color: #53257d;
                    }

                    border-radius: 10px;
                    padding: 5px 15px;

                    p {
                      color: white;
                      margin: 0;
                      font-size: 14px;
                      font-weight: bold;
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
  }

  /* Контейнер для ReviewsBlock - только для отступов */
  .reviews-container {
    width: 80%;
    margin-top: 30px;
  }
}

